--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,3 +5,7 @@ theme:
   language: es
 nav:
   - Inicio: docs/index.md
+  - Guía rápida: docs/guia.md
+  - Ejemplos: docs/ejemplos.md
+  - Contribuir: docs/contribuir.md
+  - Roadmap: docs/roadmap.md
