archivos limpios y se agrego conf.env

--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,16 @@ python/
 
 # MkDocs
 site/
+site/**/*
+*.html
+*.css
+*.js
+sitemap.xml
+sitemap.xml.gz
+
+# Otros archivos comunes
 *.lock
+
 
 notes.txt
 .env
